<resources>
    <string name="app_name">Sellastic Pots</string>

    <!-- Login Screen -->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_or_username">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">-OR-</string>

    <!-- Forgot Password Screen -->
    <string name="reset_password">Reset Password</string>
    <string name="reset_instructions">Enter your email address to reset your password</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="back_to_login">Back to Login</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>